JumpScript/tests/baselines/reference/this_inside-object-literal-getters-and-setters.errors.txt
tests/cases/compiler/this_inside-object-literal-getters-and-setters.jump(4,13): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/this_inside-object-literal-getters-and-setters.jump(7,13): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/compiler/this_inside-object-literal-getters-and-setters.jump (2 errors) ====
    module ObjectLiteral {
        var ThisInObjectLiteral = {
            _foo: '1',
            get foo(): string {
                ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
                return this._foo;
            },
            set foo(value: string) {
                ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
                this._foo = value;
            },
            test: function () {
                return this._foo;
            }
        }
    }
    
    